# warehouse-setup-service

./: .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  routes.py
app/api/v1/: api.py  terraform.py
app/api/v1/endpoints/: health.py  terraform.py  terraform_operations.py
app/core/: auth.py  celery_app.py  config.py  logging_config.py
app/schemas/: terraform.py
app/services/: terraform_job_store.py
app/tasks/: terraform.py
app/terraform_files/createSuperset/: README.txt  main.tf  terraform.tfvars.example  variables.tf
app/terraform_files/createWarehouse/: main.tf  terraform.tfvars.example  variables.tf
app/tests/: conftest.py
app/tests/unit/: test_health.py  test_task_tfvars.py  test_terraform.py
