[build-system]
requires = ["hatchling>=1.17.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]  # Specify the directory containing your package

[project]
name = "warehouse-api"
version = "0.1.0"
description = "FastAPI Warehouse API"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "himanshu Dube", email = "himanshu@projecttech4dev.org"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.2",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "python-terraform>=0.10.1",
    "celery>=5.3.1",
    "redis>=4.5.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
    "pytest-mock>=3.10.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = "test_*.py"
python_functions = "test_*"